--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="src/myCtrl2.js"></script>
   <script src="src/userCtrl.js"></script>
   <script src="src/productsCtrl.js"></script>
+  <script src="src/time.filter.js"></script>
 </head>
 
 <body>
