--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <script src="src/userCtrl.js"></script>
   <script src="src/productsCtrl.js"></script>
   <script src="src/time.filter.js"></script>
+  <script src="src/product.svc.js"></script>
 </head>
 
 <body>
