Product Detail Page

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="src/productsCtrl.js"></script>
   <script src="src/time.filter.js"></script>
   <script src="src/product.svc.js"></script>
+  <script src="src/productDetailCtrl.js"></script>
 </head>
 
 <body>
