New Product Page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="src/time.filter.js"></script>
   <script src="src/product.svc.js"></script>
   <script src="src/productDetailCtrl.js"></script>
+  <script src="src/newProductCtrl.js"></script>
 </head>
 
 <body>
