--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
   <script src="src/myCtrl2.js"></script>
   <script src="src/userCtrl.js"></script>
   <script src="src/productsCtrl.js"></script>
-  <script src="src/time.filter.js"></script>
-  <script src="src/product.svc.js"></script>
   <script src="src/productDetailCtrl.js"></script>
   <script src="src/newProductCtrl.js"></script>
+
+  <script src="src/shared.js"></script>
+  <script src="src/time.filter.js"></script>
+  <script src="src/product.svc.js"></script>
+
 </head>
 
 <body>
