--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
   <script src="src/productsCtrl.js"></script>
   <script src="src/productDetailCtrl.js"></script>
   <script src="src/newProductCtrl.js"></script>
+  <script src="src/address.directive.js"></script>
+  <script src="src/product.directive.js"></script>
 
   <script src="src/shared.js"></script>
   <script src="src/time.filter.js"></script>
@@ -31,7 +33,7 @@
   <div ng-app="app">
 
     <div ng-include="'/src/templates/header.html'"></div>
-
+    
     <div class="container">
       <ng-view></ng-view>
     </div>
