Review list directive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <script src="src/newProductCtrl.js"></script>
   <script src="src/address.directive.js"></script>
   <script src="src/product.directive.js"></script>
-
+  <script src="src/review-list.directive.js"></script>
   <script src="src/shared.js"></script>
   <script src="src/time.filter.js"></script>
   <script src="src/product.svc.js"></script>
@@ -33,7 +33,7 @@
   <div ng-app="app">
 
     <div ng-include="'/src/templates/header.html'"></div>
-    
+
     <div class="container">
       <ng-view></ng-view>
     </div>
