--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
   <script src="src/address.directive.js"></script>
   <script src="src/product.directive.js"></script>
   <script src="src/review-list.directive.js"></script>
+  <script src="src/product-review.directive.js"></script>
+
+
   <script src="src/shared.js"></script>
   <script src="src/time.filter.js"></script>
   <script src="src/product.svc.js"></script>
