--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <script src="src/product.directive.js"></script>
   <script src="src/review-list.directive.js"></script>
   <script src="src/product-review.directive.js"></script>
+  <script src="src/product.interceptor.js"></script>
 
 
   <script src="src/shared.js"></script>
