--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
   <script src="node_modules/angular-route/angular-route.js"></script>
   <script src="node_modules/moment/moment.js"></script>
 
-  <script src="src/app.js"></script>
+
+  <script src="dist/app.min.js"></script>
+  <script src="dist/shared.js"></script>
+
+  <!-- <script src="src/app.js"></script>
   <script src="src/myCtrl.js"></script>
   <script src="src/myCtrl2.js"></script>
   <script src="src/userCtrl.js"></script>
@@ -24,12 +28,12 @@
   <script src="src/product.directive.js"></script>
   <script src="src/review-list.directive.js"></script>
   <script src="src/product-review.directive.js"></script>
-  <script src="src/product.interceptor.js"></script>
+  <script src="src/product.interceptor.js"></script> -->
 
 
-  <script src="src/shared.js"></script>
+  <!-- <script src="src/shared.js"></script>
   <script src="src/time.filter.js"></script>
-  <script src="src/product.svc.js"></script>
+  <script src="src/product.svc.js"></script> -->
 
 </head>
 
