--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" />
   <link rel="stylesheet" href="css/styles.css" />
 
-  <script src="node_modules/angular/angular.js"></script>
-  <script src="node_modules/angular-route/angular-route.js"></script>
-  <script src="node_modules/moment/moment.js"></script>
+  <script src="lib/angular.js"></script>
+  <script src="lib/angular-route.js"></script>
+  <script src="lib/moment.js"></script>
 
+<!-- development -->
+<!-- <script src="dist/app.js"></script> -->
 
   <script src="dist/app.min.js"></script>
   <script src="dist/shared.js"></script>
