--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
 <!-- development -->
 <!-- <script src="dist/app.js"></script> -->
-
+<!-- IIS, Apache, Tomcat -->
   <script src="dist/app.min.js"></script>
-  <script src="dist/shared.js"></script>
+  <script src="dist/shared.min.js"></script>
 
   <!-- <script src="src/app.js"></script>
   <script src="src/myCtrl.js"></script>
