--- a/index.html
+++ b/index.html
@@ -51,6 +51,15 @@
   <canvas id="cvs" width="650" height="500">
   </canvas>
 
+  <div>Lives: <h3 id="lives"></h3>
+  </div>
+
+  <select onchange="changeSize(event)">
+    <option value="s">Small</option>
+    <option value="m">Medium</option>
+    <option value="l">Large</option>
+  </select>
+
   <script src="scripts.js"></script>
 
 
