--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
   <script src="src/product.svc.js"></script> -->
 
   <style>
-    canvas {
+    canvas,
+    svg {
       border: 1px solid gray;
     }
   </style>
@@ -48,7 +49,23 @@
 
 <body>
 
-  <canvas id="cvs" width="650" height="500">
+  <!-- adobe illustrator -->
+
+  <svg width="300" height="300">
+
+    <circle cx="80" cy="80" r="50" fill="#0095DD"/>
+    <text x="60" y="85" stroke="red" font-family="verdana" font-size="20">Naresh Tehnologies</text>
+
+    <!-- <circle cx="30" cy="30" r="25" fill="#0095DD" stroke="red" stroke-width="5" />
+    <circle cx="100" cy="50" r="25" fill="#0095DD" />
+    <circle cx="170" cy="70" r="25" fill="#0095DD" />
+
+    <rect rx="10" ry="20" x="190" y="200" width="100" height="40" fill="#0095DD" />
+
+    <ellipse rx="10" ry="15" cx="100" cy="200" fill="#0095DD" /> -->
+  </svg>
+
+  <!-- <canvas id="cvs" width="650" height="500">
   </canvas>
 
   <div>Lives: <h3 id="lives"></h3>
@@ -60,7 +77,7 @@
     <option value="l">Large</option>
   </select>
 
-  <script src="scripts.js"></script>
+  <script src="scripts.js"></script> -->
 
 
   <!-- <div ng-app="app">
