--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
     svg {
       border: 1px solid gray;
     }
+
+    #parent {
+      width: 500px;
+      height: 300px;
+      border: 1px solid gray;
+    }
   </style>
 
 
@@ -49,21 +55,54 @@
 
 <body>
 
+
+  <div ondrop="drop(event)" ondragover="allow(event)" id="parent"></div>
+
+  <h1 id="h1" draggable="true" ondragstart="drag(event)">Heading 1</h1>
+  <h1 id="h2" draggable="true" ondragstart="drag(event)">Heading 2</h1>
+  <h1 id="h3" draggable="true" ondragstart="drag(event)">Heading 3</h1>
+  <h1 id="h4" draggable="true" ondragstart="drag(event)">Heading 4</h1>
+  <h1 id="h5" draggable="true" ondragstart="drag(event)">Heading 5</h1>
+  <h1 id="h6" draggable="true" ondragstart="drag(event)">Heading 6</h1>
+
+
+  <script>
+
+    function drag(e) {
+      e.dataTransfer.setData("elem", e.target.id);
+    }
+
+    function allow(e) {
+      e.preventDefault();
+    }
+
+    function drop(e) {
+      var id = e.dataTransfer.getData("elem");
+      var elem = document.getElementById(id);
+
+      e.target.appendChild(elem);
+    }
+
+  </script>
+
+
+
+
   <!-- adobe illustrator -->
 
-  <svg width="300" height="300">
+  <!-- <svg width="300" height="300">
 
-    <circle cx="80" cy="80" r="50" fill="#0095DD"/>
-    <text x="60" y="85" stroke="red" font-family="verdana" font-size="20">Naresh Tehnologies</text>
+    <circle cx="80" cy="80" r="50" fill="#0095DD" />
+    <text x="60" y="85" stroke="red" font-family="verdana" font-size="20">Naresh Tehnologies</text> -->
 
-    <!-- <circle cx="30" cy="30" r="25" fill="#0095DD" stroke="red" stroke-width="5" />
+  <!-- <circle cx="30" cy="30" r="25" fill="#0095DD" stroke="red" stroke-width="5" />
     <circle cx="100" cy="50" r="25" fill="#0095DD" />
     <circle cx="170" cy="70" r="25" fill="#0095DD" />
 
     <rect rx="10" ry="20" x="190" y="200" width="100" height="40" fill="#0095DD" />
 
     <ellipse rx="10" ry="15" cx="100" cy="200" fill="#0095DD" /> -->
-  </svg>
+  <!-- </svg> -->
 
   <!-- <canvas id="cvs" width="650" height="500">
   </canvas>
@@ -90,6 +129,27 @@
 
     <div ng-include="'/src/templates/footer.html'"></div>
   </div> -->
+
+  <!-- <script>
+
+    function success(position) {
+      console.log("Your position is", position.coords.latitude, position.coords.longitude)
+    }
+
+    function positionUpdate(position) {
+      //updated position
+    }
+
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(success);
+
+      navigator.geolocation.watchPosition(positionUpdate);
+    }
+    else {
+      alert("your browser deosn't support geolocation api");
+    }
+
+  </script> -->
 
 </body>
 
